[package]
name = "ushuttle"
version = "1.0.0"
edition = "2021"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
chacha20poly1305 = "0.10.1"
clap = { version = "4.1.11", features = ["derive"] }
crypto-common = { version = "0.1.6", features = ["std"] }
aead = { version = "0.5.1", features = ["std"] }
generic-array = "0.14.6"
digest = "0.10.6"
chrono = "0.4.24"
fern = { version = "0.6", features = ["colored"] }
log = "0.4.17"
once_cell = "1.17.1"
sha256 = "1.1.2"
tokio = { version = "1.26.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "sync", "time"] }
thiserror = "1.0.40"
crc32fast = "1.3.2"
flume = "0.10.14"
proxie = { version = "0.1.1", features = ["enable_tokio"] }
